# django-role

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: python-publish.yml
core/: forms.py  models.py  views.py  widgets.py
core/migrations/: 0001_initial.py
django_user_role/: asgi.py  settings.py  urls.py  wsgi.py
user_role/: __init__.py  backends.py  forms.py  managers.py  models.py  views.py  widgets.py
user_role/migrations/: 0001_initial.py
user_role/static/: permissions.css  permissions.js
user_role/templates/forms/widgets/: permission_input.html  permission_option.html  permissions_select.html
user_role/templates/role/: create.html  update.html
