[tool.poetry]
name = "django-role"
version = "0.1.0"
description = "Role for django User model"
authors = ["isys35 <isys35@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "user_role"}]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
