[tool.poetry]
name = "django-role"
version = "0.1.3"
description = "Role for django User model"
authors = ["isys35 <isys35@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/isys35/django-role"
repository = "https://github.com/isys35/django-role"
documentation = "https://github.com/isys35/django-role"
keywords = ["django"]
packages = [{ include = "user_role"}]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
